Fixed static files, readme

--- a/client/public/login/login_template.html
+++ b/client/public/login/login_template.html
@@ -49,10 +49,9 @@
                 </div>
             </md-input-container>
             <div layout="row">
-                <md-button flex ng-click="$ctrl.login()" class="md-raised md-primary">Login</md-button>
+                <md-button ng-click="$ctrl.login()" class="md-raised md-primary">Login</md-button>
                 <a ui-sref="register" flex class="md-button md-raised md-primary">Register</a>
             </div>
         </div>
     </div>
 </form>
-
